# zhazba

./: .gitignore  .taplo.toml  Cargo.toml
.cargo/: config.toml
.config/: zhazba.d.lua  zhazba.lua
.config/plugins/: test.lua
.config/zhazba/: init.lua
.config/zhazba/plugins/builtins/: buffer.lua  status.lua
.config/zhazba/types/: zhazba.d.lua
crates/zhazba_action/: Cargo.toml
crates/zhazba_action/src/: action.rs  lib.rs
crates/zhazba_args/: Cargo.toml
crates/zhazba_args/src/: lib.rs
crates/zhazba_buffer/: Cargo.toml
crates/zhazba_buffer/src/: buffer.rs  lib.rs  manager.rs  pos.rs
crates/zhazba_config/: Cargo.toml
crates/zhazba_config/src/: config.rs  lib.rs  lua.rs
crates/zhazba_editor/: Cargo.toml
crates/zhazba_editor/src/: action.rs  buffer.rs  command.rs  editor.rs  event.rs  key_event.rs  lib.rs  lua.rs
crates/zhazba_logger/: Cargo.toml
crates/zhazba_logger/src/: lib.rs
crates/zhazba_lua/: Cargo.toml
crates/zhazba_lua/src/: lib.rs
crates/zhazba_lua_derive/: Cargo.toml
crates/zhazba_lua_derive/src/: lib.rs
crates/zhazba_plugin/: Cargo.toml
crates/zhazba_plugin/src/: lib.rs  plugin.rs  registry.rs  runtime.rs
crates/zhazba_render/: Cargo.toml
crates/zhazba_render/src/: element.rs  lib.rs  lua.rs  render.rs  term.rs  ui_register.rs
crates/zhazba_render_derive/: Cargo.toml
crates/zhazba_render_derive/src/: lib.rs
src/: main.rs
