[package]
name = "zhazba"
version = "0.1.0"
edition = "2024"
authors = ["Alibek Bekzhanov"]

[dependencies]
# Internal crates
zhazba_action = { workspace = true }
zhazba_args = { workspace = true }
zhazba_editor = { workspace = true }
zhazba_logger = { workspace = true }
zhazba_lua = { workspace = true }
zhazba_render = { workspace = true }

# External packages
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }


[[bin]]
name = "zhazba"
path = "src/main.rs"
edition = "2024"


[workspace]
members = [
  "crates/zhazba_action",
  "crates/zhazba_args",
  "crates/zhazba_buffer",
  "crates/zhazba_config",
  "crates/zhazba_editor",
  "crates/zhazba_logger",
  "crates/zhazba_lua",
  "crates/zhazba_plugin",
  "crates/zhazba_render",
]
resolver = "2"

[workspace.dependencies]
# Internal crates
zhazba_action = { path = "crates/zhazba_action" }
zhazba_args = { path = "crates/zhazba_args" }
zhazba_buffer = { path = "crates/zhazba_buffer" }
zhazba_config = { path = "crates/zhazba_config" }
zhazba_editor = { path = "crates/zhazba_editor" }
zhazba_logger = { path = "crates/zhazba_logger" }
zhazba_lua = { path = "crates/zhazba_lua" }
zhazba_plugin = { path = "crates/zhazba_plugin" }
zhazba_render = { path = "crates/zhazba_render" }

# External packages
anyhow = { version = "1.0.98" }
clap = { version = "4.5.36", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = { version = "0.3.31" }
futures-timer = { version = "3.0.3" }
mlua = { version = "0.10.3", features = ["lua54", "vendored"] }
proc-macro2 = { version = "1.0.95" }
quote = { version = "1.0.40" }
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
ropey = { version = "1.6.1" }
syn = { version = "2.0.100", features = ["full"] }
tokio = { version = "1.44.2", features = ["macros", "rt", "sync"] }
tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
