[package]
name = "zhazba_lua_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true


[dependencies]
# Internal crates
# zhazba_config = { workspace = true }

# External packages
mlua = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
